samples/_failures_safe/1761562563_f8611a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54c5e5dc.c: In function ‘main’:
./samples/SAFE/__tmp_54c5e5dc.c:167:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  167 |     struct Token token
      |            ^~~~~
./samples/SAFE/__tmp_54c5e5dc.c:167:12: error: expected declaration or statement at end of input
